--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REBOOT" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
 
     <application
@@ -20,18 +21,20 @@
         android:label="@string/app_name"
         android:theme="@style/RagnarTheme.Dark" >
         <activity
-            android:name="com.ultima.settings.SettingsActivity"
+            android:name="com.ultima.settings.otaupdater.UpdaterActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
 
             </intent-filter>
         </activity>
         <activity
             android:name="com.ultima.settings.bootanimation.BootAnimationActivity"
             android:label="@string/boot_animation_title"
-            android:parentActivityName="com.ultima.settings.SettingsActivity" >
+            android:parentActivityName="com.ultima.settings.SettingsActivity" 
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ultima.settings.SettingsActivity" />
@@ -39,7 +42,8 @@
         <activity
             android:name="com.ultima.settings.bootanimation.BootAnimationSettings"   
             android:label="@string/boot_animation_title"
-            android:parentActivityName="com.ultima.settings.bootanimation.BootAnimationActivity">
+            android:parentActivityName="com.ultima.settings.bootanimation.BootAnimationActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ccom.ultima.settings.bootanimation.BootAnimationActivity" />
@@ -47,10 +51,31 @@
         <activity
             android:name="com.ultima.settings.hostname.HostnameActivity" 
             android:label="@string/title_activity_hostname"
-            android:parentActivityName="com.ultima.settings.SettingsActivity" >
+            android:parentActivityName="com.ultima.settings.SettingsActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ultima.settings.SettingsActivity" />
+        </activity>
+        
+<!--          <activity -->
+<!--             android:name="com.ultima.settings.otaupdater.UpdaterActivity"  -->
+<!--             android:label="@string/updater_activity_name" -->
+<!--             android:parentActivityName="com.ultima.settings.SettingsActivity" -->
+<!-- 			 android:configChanges="keyboard|keyboardHidden|orientation|screenSize"> -->
+<!--             <meta-data -->
+<!--                 android:name="android.support.PARENT_ACTIVITY" -->
+<!--                 android:value="com.ultima.settings.SettingsActivity" /> -->
+<!--         </activity> -->
+
+         <activity
+            android:name="com.ultima.settings.otaupdater.UpdaterCheck" 
+            android:label="@string/updater_activity_name"
+            android:parentActivityName="com.ultima.settings.otaupdater.UpdaterActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ultima.settings.otaupdater.UpdaterActivity" />
         </activity>
     </application>
 
